# bayesmix

./: CMakeLists.txt  Untitled.ipynb
examples/: CMakeLists.txt
examples/gamma_hierarchy/: run_gamma_gamma.cc
examples/tutorial/: plot.sh  run.sh
executables/: plot_mcmc.cc  run_mcmc.cc
resources/tutorial/: nnig_fixed.asciipb  nnig_ngg.asciipb
src/: includes.h
src/hierarchies/: CMakeLists.txt  lapnig_hierarchy.cc  load_hierarchies.h  nnig_python_hierarchy.cpp  nnig_python_hierarchy.h
src/proto/: algorithm_state.proto  distribution.proto  hierarchy_id.proto  hierarchy_prior.proto  ls_state.proto  semihdp.proto
src/utils/: CMakeLists.txt  rng.h
